<resources>
    <string name="general_settings">Основные настройки</string>
    <string name="target_language">Язык изучения</string>
    <string name="english">Английский</string>
    <string name="daily_goal">Цель на день</string>
    <string name="notifications">Уведомления</string>
    <string name="daily_reminders">Ежедневные напоминания</string>
    <string name="progress_notifications">Уведомления о прогрессе</string>
    <string name="weekly_progress_reports">Еженедельные отчеты</string>
    <string name="learning">Обучение</string>
    <string name="pronunciation">Произношение</string>
    <string name="native_speaker">Носитель языка</string>
    <string name="difficulty_level">Уровень сложности</string>
    <string name="beginner">Начинающий</string>
    <string name="word_repetition">Повторение слов</string>
    <string name="repeat_learned_words">Повторять изученные слова</string>
    <string name="about_app">О приложении</string>
    <string name="about">О приложении</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="app_version">Версия 1.0.0</string>
    <string name="app_name">Grable</string>
    <string name="native_language">Родной язык</string>
    <string name="russian">Русский</string>
    <string name="learning_mode">Режим изучения</string>
    <string name="vocabulary_first">Сначала слова</string>
    <string name="audio_settings">Настройки аудио</string>
    <string name="auto_play_sound">Автоматическое проигрывание</string>
    <string name="auto_play_description">Звук воспроизводится автоматически</string>
    <string name="playback_speed">Скорость воспроизведения</string>
    <string name="voice_type">Голос</string>
    <string name="female_voice">Женский</string>
    <string name="data_management">Управление данными</string>
    <string name="export_progress">Экспортировать прогресс</string>
    <string name="reset_progress">Сброс прогресса</string>
    <string name="terms_of_service">Условия пользования</string>
    <string name="main_title">Привет!</string>
    <string name="main_subtitle">Время прокачать словарный запас</string>
    <string name="action_repeat_title">Повторение слов</string>
    <string name="action_repeat_desc">Закрепи изученные слова быстрой тренировкой.</string>
    <string name="action_repeat_cta">Начать повторение</string>
    <string name="action_collection_title">Учить подборку</string>
    <string name="action_collection_desc">Собери набор слов по теме и проходи курс.</string>
    <string name="action_collection_cta">Выбрать подборку</string>
    <string name="categories_title">Добавь слова по категориям</string>
    <string name="categories_hint">Собери новую подборку из любимых тем.</string>
    <string name="category_food">Еда</string>
    <string name="category_medicine">Медицина</string>
    <string name="category_b2">Словарь B2</string>
    <string name="category_c1">Словарь C1</string>
    <string name="add_categories_cta">Добавить в подборку</string>
    <string name="home">Главная</string>
    <string name="learn">Учить</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_subtitle">Основные</string>
    <string name="learn_know">Знаю</string>
    <string name="learn_next">Следующее</string>
    <string name="learn_previous">Предыдущее</string>
    <string name="learn_tap_to_card">Нажмите на карточку, чтобы увидеть перевод</string>
    <string name="learn_play_sound">Воспроизвести произношение</string>
    <string name="editWord">Редактировать слово</string>

    <string name="caption_lang_ru">Русский</string>
    <string name="caption_lang_en">English</string>
    <string name="settings_general">Основные настройки</string>
    <string name="theme_layout">Тема</string>
    <string name="settings_audio">Аудио настройки</string>
    <string name="voice_type_layout">Голос озвучки</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="settings_daily_notifications">Ежедневные напоминания</string>
    <string name="settings_about">О приложении</string>
    <string name="settings_about_text">Grable - приложение для изучения языков</string>
    <string name="settings_dialog_voice_type">Выберите голос диктора</string>
    <string name="settings_cancel">Отмена</string>

</resources>