<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_2xl"
            android:paddingBottom="@dimen/spacing_3xl">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/card_padding">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_title"
                    android:textAppearance="@style/TextAppearanceHeadline2" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xs"
                    android:text="@string/main_subtitle"
                    android:textAppearance="@style/TextAppearanceBody1Secondary" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/spacing_xl"
                android:paddingTop="@dimen/spacing_lg"
                android:paddingBottom="@dimen/spacing_3xl">


                <LinearLayout
                    android:id="@+id/review_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_2xl"
                    style="@style/Widget.Grable.Layout.ActionCard">

                    <TextView
                        android:id="@+id/repeat_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_repeat_title"
                        android:textAppearance="@style/TextAppearanceHeadline3" />

                    <TextView
                        android:id="@+id/repeat_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:text="@string/action_repeat_desc"
                        android:textColor="@color/text_secondary"
                        android:textAppearance="@style/TextAppearanceBody2" />

                    <Button
                        android:id="@+id/button_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_base"
                        android:text="@string/action_repeat_cta"
                        style="@style/Widget.Grable.Button.Primary" />
                </LinearLayout>
 
                <LinearLayout
                    android:id="@+id/collection_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_base"
                    style="@style/Widget.Grable.Layout.ActionCard">

                    <TextView
                        android:id="@+id/collection_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_collection_title"
                        android:textAppearance="@style/TextAppearanceHeadline3" />

                    <TextView
                        android:id="@+id/collection_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:text="@string/action_collection_desc"
                        android:textColor="@color/text_secondary"
                        android:textAppearance="@style/TextAppearanceBody2" />

                    <Button
                        android:id="@+id/button_collection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_base"
                        android:text="@string/action_collection_cta"
                        style="@style/Widget.Grable.Button.Primary" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categories_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_base"
                    style="@style/Widget.Grable.Layout.ActionCard">

                    <TextView
                        android:id="@+id/categories_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories_title"
                        android:textAppearance="@style/TextAppearanceHeadline3" />

                    <TextView
                        android:id="@+id/categories_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:text="@string/categories_hint"
                        android:textColor="@color/text_secondary"
                        android:textAppearance="@style/TextAppearanceBody2" />

                    <Button
                        android:id="@+id/button_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_base"
                        android:text="Перейти к категориям"
                        style="@style/Widget.Grable.Button.Primary" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
